# interface_trykernel_2

./: .gitignore  LICENSE  ReadMe.md  changelog.md
application/part1/: led_blink.c
application/part2/: sonic_sns_1.c  sonic_sns_2.c
application/part3/: led_blink.c  sonic_sns.c
application/part4/car/: appli.h  dis_sns.c  line_sns.c  run_ctl.c  usermain.c
application/part4/car_amp_1/: appli.h  dis_sns.c  pwm_rp2040.c  run_ctl.c  usermain.c
application/part4/car_apm_2/: appli.h  dis_sns.c  line_sns.c  pwm_rp2040.h  run_ctl.c  usermain.c
application/part5/: led_blink.c  mandelbrot_1.c  mandelbrot_2.c
application/part6/car/: CMakeLists.txt  picow_car.c
application/part6/car/core_0/: main_c0.c
application/part6/car/core_1/application/: appli.h  car_main.c  icc.c  pwm_rp2040.c  pwm_rp2040.h  run_ctl.c
application/part6/car/core_1/boot/: reset_hdr.c  vector_tbl.c
application/part6/car/core_1/device/adc/: adc_rp2040.c  adc_sysdep.h
application/part6/car/core_1/include/: config.h  error.h  knldef.h  sysdef.h  trykernel.h
application/part6/car/core_1/kernel/: eventflag.c  gpio.c  scheduler.c  syslib.c  systimer.c  task_mange.c
application/part6/python/: test_remote0.py  test_remote1.py  test_srv0.py  test_srv1.py
application/part6/sns_1/: CMakeLists.txt
application/part6/sns_1/core_0/: main_c0.c
application/part6/sns_1/core_1/application/: sns.c
application/part6/sns_1/core_1/boot/: start_c1.c
application/part6/sns_1/core_1/device/devmgr/: device.c
application/part6/sns_1/core_1/device/i2c/: dev_i2c.h  i2c_sysdep.h
application/part6/sns_1/core_1/include/: apidef.h  config.h  gpio.h  knldef.h  syslib.h  typedef.h
application/part6/sns_1/core_1/kernel/: messagebuf.c
application/part6/sns_1/core_1/linker/: pico_memmap.ld
docs/: win_inst.md
hybsys/: CMakeLists.txt  hyb_main.c
hybsys/core_0/: main_c0.c
hybsys/core_1/application/: blink.c
hybsys/core_1/boot/: vector_tbl.c
hybsys/core_1/device/adc/: dev_adc.h
hybsys/core_1/device/devmgr/: device.h  device_tbl.c
hybsys/core_1/device/i2c/: i2c_rp2040.c
hybsys/core_1/include/: sysdef.h
hybsys/core_1/kernel/: context.c  dispatch.S  gpio.c  inittsk.c  interrupt.c  semaphore.c  task_queue.c  task_sync.c
trykernel_2/: .cproject  .project
trykernel_2/device/adc/: adc_rp2040.c
trykernel_a/: .cproject  .project
trykernel_a/application/: usermain.c
trykernel_a/boot/: reset_hdr.c  vector_tbl.c
trykernel_a/build_make/: sources.mk
trykernel_a/device/adc/: adc_sysdep.h
trykernel_a/include/: apidef.h  config.h  error.h  gpio.h  knldef.h  sysdef.h  syslib.h  typedef.h
trykernel_a/kernel/: context.c  dispatch.S  eventflag.c  gpio.c  icc_core.c  icc_int.c  icc_msg.c  icc_spin.c  inittsk.c  interrupt.c  messagebuf.c  scheduler.c  semaphore.c  syslib.c  systimer.c  task_mange.c  task_queue.c  task_sync.c
trykernel_s/: .cproject  .project
trykernel_s/boot/: reset_hdr.c
trykernel_s/build_make/: makefile  sources.mk
trykernel_s/include/: apidef.h  config.h  error.h  gpio.h  knldef.h  sysdef.h  syslib.h  trykernel.h  typedef.h
trykernel_s/kernel/: context.c  dispatch.S  eventflag.c  gpio.c  icc_core.c  icc_int.c  icc_spin.c  inittsk.c  interrupt.c  messagebuf.c  scheduler.c  semaphore.c  syslib.c  systimer.c  task_mange.c  task_queue.c  task_sync.c
trykernel_s/linker/: pico_memmap.ld
